--- a/CSS/landing.css
+++ b/CSS/landing.css
@@ -1,18 +1,23 @@
+/* font cdn */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+/* root styling to avoid repetition */
 :root {
   --main-bg-color: #0A0A00;
   --main-color: #D01110;
   --main-text-color: #FFFFFF;
 }
+/* universal styling */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+/* body styling */
 body {
   font-family: 'Poppins', sans-serif;
   color: var(--main-text-color);
 }
+/* background fixed video */
 .video {
   width: 100vw;
   height: 100vh;
@@ -24,6 +29,7 @@ body {
   width: 100vw;
   min-height: 100vh;
 }
+/* section on top of video */
 .content {
   position: absolute;
   top: 0;
@@ -67,4 +73,5 @@ body {
   padding: 3px 7px;
   border-radius: 10px;
 }
+/* nav bar styling end */
 
