--- a/CSS/slim.css
+++ b/CSS/slim.css
@@ -1,6 +1,10 @@
 body{
     background-color: #0A0A00;
     color: white;
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+
 }
 :root {
     --main-bg-color: #0A0A00;
@@ -45,21 +49,29 @@ body{
     position: absolute;
     width: 586px;
     height: 422px;
-    left: 818px;
-    top: 195px;
+    left: 940px;
+    top: 280px;
     
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 700;
-    font-size: 64px;
+    font-size: 60px;
     line-height: 96px;
     text-align: center;
+}
+.pic1{
+    position: absolute;
+width: 850px;
+height: 570px;
+left: 0px;
+top: 134px;
+
 }
 .header{
     position: absolute;
 width: 1341px;
 height: 196px;
-left: 52px;
+left:240px;
 top: 809px;
 
 font-family: 'Poppins';
@@ -74,9 +86,54 @@ text-align: center;
     position: absolute;
 width: 1362px;
 height: 544px;
-left: 46px;
-top: 1200px;
+left: 10%;
+top: 1900px;
 
 border: 1px solid #D01110;
 box-sizing: border-box;
+}
+
+.back{
+    position: absolute;
+width: 1340px;
+height: 346px;
+right: 15%;
+top: 1500px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 36px;
+line-height: 54px;
+text-align: center;
+}
+h2{
+    font-weight: bold;
+    font-size: 150%;
+    left: 100%;
+}
+.video{
+    position: absolute;
+    top: 80%;
+    left: 2%;
+}
+.step{
+    position: absolute;
+    font-size: xx-large;
+    text-align: center;
+    width: 90%;
+   bottom: 40%;
+   left: 95%; 
+   
+}
+.summary{
+    position: absolute;
+    top:270%;
+    text-align: justify;
+    left: 10%;
+    font-size: xx-large;
+}
+h4{
+    color: #D01110;
+    font-size: 140%;
 }
