--- a/CSS/maintain.css
+++ b/CSS/maintain.css
@@ -3,9 +3,43 @@
 /* - - - browser resets - - - */
 :root {
     --main-bg-color: #0A0A00;
-    --main-color:#D0110;
-    --main-text-color:#FFFFFF;
-}
+    --main-color: #D01110;
+    --main-text-color: #FFFFFF;
+  }
+.row {
+    width: 100vw;
+  }
+  .red {
+    color: var(--main-color);
+  }
+  .turn {
+    transform: rotate(-45deg);
+  }
+  .unturn {
+    transform: rotate(45deg);
+  }
+  .list ul {
+    list-style: none;
+  }
+  .list ul li a {
+    text-decoration: none;
+    color: var(--main-text-color);
+    transition: 0.3s ease;
+  }
+  .list ul li a:hover {
+   color: var(--main-color);
+   font-size: 15px;
+  }
+  .log:hover {
+    color: var(--main-text-color);
+    background-color: transparent;
+    border: 1px solid var(--main-color);
+  }
+  .log {
+    background-color: var(--main-color);
+    padding: 3px 7px;
+    border-radius: 10px;
+  }
  *{
      margin: 0;
      padding: 0;
