--- a/CSS/maintain.css
+++ b/CSS/maintain.css
@@ -109,7 +109,7 @@ body {
     color: #fff;
     padding: 1% 3%;
     outline: none;
-    border: 0.2vw solid #ca0808;
+    border: 0.2vw solid var(--main-color);
     margin-top: 2%;
     border-radius: 0.7vw;
     cursor: pointer;
