--- a/CSS/addweight.css
+++ b/CSS/addweight.css
@@ -15,7 +15,10 @@
     background-color: #0A0A00;
   }
   .row {
-    width: 100vw;
+    /* width: 100vw; */
+  }
+  .broad {
+    border: 1px solid #c50c0c;
   }
   .red {
     color: var(--main-color);
@@ -48,15 +51,14 @@
     padding: 3px 7px;
     border-radius: 10px;
   }
-.container{
+  
+/* .{
     position: absolute;
-    left: 1000px;
-    top: 200px;
     font-family: 'Poppins';
     font-weight: bold;
     font-size: 64px;
     text-align: center;
-} 
+}  */
 .text{
     text-align:center;
 }
@@ -64,5 +66,12 @@ img{
     position:center;
 }
 .col{
-    font-size: 20px;
+    font-size: 25px;
+}
+.info{
+    font-size: 25px;
+}
+.vid{
+  width: 100%;
+  height: auto;
 }
