--- a/CSS/landing.css
+++ b/CSS/landing.css
@@ -7,7 +7,7 @@
   --main-text-color: #FFFFFF;
 }
 /* universal styling */
-* {
+*, **::after, **::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -16,6 +16,7 @@
 body {
   font-family: 'Poppins', sans-serif;
   color: var(--main-text-color);
+  overflow-x: hidden;
 }
 /* background fixed video */
 .video {
@@ -29,6 +30,15 @@ body {
   width: 100vw;
   min-height: 100vh;
 }
+.myVideo::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.1); 
+}
 /* section on top of video */
 .content {
   position: absolute;
@@ -36,9 +46,13 @@ body {
   bottom: 0;
   right: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.4);
+  /* background-color: rgba(0, 0, 0, 0.4); */
 }
 /* nav style */
+.nav {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+}
 .row {
   width: 100vw;
 }
@@ -74,4 +88,46 @@ body {
   border-radius: 10px;
 }
 /* nav bar styling end */
-
+/* About section styling */
+.stop {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.para p {
+  padding-left: 10px;
+  border-left: 1px solid var(--main-color);
+  width: 80%;
+  margin: auto;
+  line-height: 30px;
+  padding: 15px;
+  text-align: justify;
+}
+/* subscribe styling */
+.subscribe input {
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid var(--main-color);
+  margin-bottom: 10px;
+}
+.subscribe input::placeholder {
+  color: var(--main-text-color);
+}
+.submit {
+  border: 1px solid var(--main-color) !important;
+  padding: 3px 7px;
+  border-radius: 10px;
+  color: var(--main-text-color);
+  transition: 0.3s ease;
+}
+.submit:hover {
+  background-color: var(--main-color);
+  font-size: 15px;
+}
+/* log-off section */
+.bigger p{
+  font-size: 100px;
+}
+/* footer styling */
