--- a/CSS/willi.css
+++ b/CSS/willi.css
@@ -7,6 +7,15 @@ body {
     --main-bg-color: #0A0A00;
     --main-color: #D01110;
     --main-text-color: #FFFFFF;
+    --clr-accent-400: hsl(142, 90%,61%);
+    --clr-neutral-900:hsl(267 19% 9%);
+    --clr-neutral-100: hsl(0, 0%, 100%);
+  }
+
+  *,
+  *::before
+  *::after {
+      box-sizing: border-box;
   }
 .row {
     width: 100vw;
@@ -54,6 +63,13 @@ body {
     font-family: 'poppins', sans-serif;
     font-size: 18px;
     color: var(--main-color);
+    min-height: 100vh;
+    line-height: 1.6;
+    font-family: sans-serif;
+    padding-left: 10em;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .text {
@@ -77,6 +93,7 @@ body {
     background-color: rgba(0, 0, 0, 0.452);
 }
 
+*/
 
 #hero .image {
     position: absolute;
@@ -87,13 +104,13 @@ body {
     min-width: 100%;
     min-height: 100%;
 }
-
+/*
 #hero .text h1{
     font-size: 5vw;
     text-transform: capitalize;
     color: #fff;
 }
-
+*/
 #hero .text {
     width: 100%;
 }
@@ -115,12 +132,12 @@ body {
     cursor: pointer;
     font-size: 0.9vw;
 }
-
-
+*/
+/*
 
 #about{
     width: 100%;
-    padding: 5% 10%;
+    padding: 50% 10%;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -139,7 +156,8 @@ body {
     justify-content: center;
     width: 48%;
 }
-
+*/
+/*
 #about .information .info {
     display: flex;
     flex-direction: column;
@@ -151,6 +169,7 @@ body {
     padding-bottom: 3%;
     text-align: justify;
 }
+*/
 
 #about .information .info button {
     background-color: #ca0808;
@@ -163,9 +182,11 @@ body {
     cursor: pointer;
     font-size: 0.9vw;
 }
+*/
 #about .infomation .images {
     justify-content: flex-end;
 }
+
 
 
 
@@ -180,23 +201,8 @@ margin-right: 20px;
 #about .infomation .images img.active {
     display: block;
 }
-#menu{
-    width: 100%;
-    padding: 5% 10%;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color:#fff
-}
- 
-h3 {
-    font-size: 2vw;
-}
-h3.menu {
- font-size: 1.5;
- padding: 2% 0 1% 0;
-}
+
+/*
 hr {
     height: 0.2vw;
     background-color: #ca0808;
@@ -205,46 +211,167 @@ hr {
     width: 5vw;
     margin-top: 0.5%;
 }
-#menu .cards {
-    width: 100px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    padding: 5% 0;
+*/
+.card0{
+    color: var(--main-text-color);
+    background-image: url(../Assets/willie/image3.jpg);
+    background-size: cover;
+    padding: 10rem 0 0;
+    max-width: 35ch;
+    border-radius: 1rem;
+    overflow: hidden;
+    transition: transform 500ms ease;
+
+}
+.card1{
+    color: var(--main-text-color);
+    background-image: url(../Assets/willie/image12.jpg);
+    background-size: cover;
+    padding: 10rem 0 0;
+    max-width: 35ch;
+    border-radius: 1rem;
+    overflow: hidden;
+    transition: transform 500ms ease;
+
+}
+.card2{
+    color: var(--main-text-color);
+    background-image: url(../Assets/willie/image13.jpg);
+    background-size: cover;
+    padding: 10rem 0 0;
+    max-width: 35ch;
+    border-radius: 1rem;
+    overflow: hidden;
+    transition: transform 500ms ease;
+
+}
+.card3{
+    color: var(--main-text-color);
+    background-image: url(../Assets/willie/image14.jpg);
+    background-size: cover;
+    padding: 10rem 0 0;
+    max-width: 35ch;
+    border-radius: 1rem;
+    overflow: hidden;
+    transition: transform 500ms ease;
+
+}
+.card4{
+    color: var(--main-text-color);
+    background-image: url(../Assets/willie/image14.jpg);
+    background-size: cover;
+    padding: 10rem 0 0;
+    max-width: 35ch;
+    border-radius: 1rem;
+    overflow: hidden;
+    transition: transform 500ms ease;
+
+}
+.card:hover {
+    transform: scale(1.05);
+} 
+
+
+.card-content {
+    padding: 1.5em;
+    background: (rgba(26, 23, 23, 0.2)
+    (0 0% / 1), rgba(20 0% 0% /1) 20% 
+    hsl(0, 0%, / 1));
+    transform: translateY(65%);
+    transition: transform 500ms ease;
+    
+
 }
 
-#menu .cards .card{
-    width: 30%;
-    margin: 4% 0;
-    border-radius: 3vw;
-    box-shadow: 0vw 0.5vw 1vw rgba(0,0,0,0.3);
-    padding: 5% 2%;
+.card:hover .card-content {
+    transform: translateY(0);
+    transition-delay: 500ms;
 }
 
-#menu .cards .card img{
-    width: 500px;
+.card-content > * :not(.card-title){
+    opacity: 0;
+    transition: opacity 500ms linear;
 }
 
-#menu .cards p{
-   padding: 0 5%;
-   font-size: 0.9vw;
-   /* text-align: justify; */
+
+
+.card:hover .card-content > * {
+    opacity: 1;
+    transition-delay: 1000ms;
 }
 
-#menu button {
-    background-color: #ca0808;
-    color: #fff;
-    padding: 1% 3%;
-    outline: none;
-    border: 0.2vw solid #ca0808;
-    margin-top: 2%;
-    border-radius: 0.7vw;
+
+.card-title {
+    position: relative;
+    width: max-content;
+}
+
+.card.title::after {
+    content: "";
+     position: absolute;
+    height: 4px;
+    left: calc(var(--padding) * -1);
+    bottom: -2px;
+    width: calc(100% + var(--padding));
+    background: var(--clr-accent-400);
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: left;
+
+    transition: transform 500ms ease;
+}
+
+.card:hover .card-title::after {
+    transform: scale(1);
+}
+
+.button {
     cursor: pointer;
-    font-size: 0.9vw;
+    display: inline;
+    text-decoration: none;
+    color: var(--clr-neutral-900);
+    background-color: var(--clr-accent-400);
+    padding: 0.5em 1.25em;
+    border-radius: 0.25em;
 }
+
+.button:hover,
+button:focus {
+    background-color: var(--clr-neutral-100);
+}
+
+.sec-1 {
+    margin-top: 10px;
+    margin-bottom: 100px;
+    margin-right: 10px;
+}
+
+.sec-2 {
+    margin-top: 10px;
+    margin-bottom: 100px;
+    margin-right: 10px;
+}
+
+
+.sec-3 {
+    margin-bottom: 100px;
+    margin-right: 10px;
+}
+
+
+.sec-4 {
+    margin-bottom: 100px;
+    margin-right: 10px;
+}
+
+.sec-5 {
+    margin-bottom: 100px;
+    margin-right: 10px;
+}
+
 
 /* - - - contact section - - - */
+
 #contact{
     width: 100%;
     padding: 5% 10%;
@@ -338,34 +465,3 @@ hr {
 
 
 
-/* ----footer section -----*/
-footer{
-    width: 100%;
-    padding: 3% 10% 2% 10%;
-    background-color: #f3f3f3;
-}
-footer .social {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-footer .social svg {
-   width: 2vw;
-   margin: 0 1%;
-   color: #ca0808;
-}
-
-footer .footer-text {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding-top: 2%;
-}
-
-footer .footer-text p {
-    font-size: 0.85vw;
-}
