--- a/CSS/willi.css
+++ b/CSS/willi.css
@@ -79,7 +79,7 @@ body {
     padding-bottom: 50px;
 }
 
-
+/*
 #hero{
     width: 100%;
     height: 100vh;
@@ -93,7 +93,7 @@ body {
     background-color: rgba(0, 0, 0, 0.452);
 }
 
-*/
+
 
 #hero .image {
     position: absolute;
@@ -170,7 +170,7 @@ body {
     text-align: justify;
 }
 */
-
+/*
 #about .information .info button {
     background-color: #ca0808;
     color: #fff;
@@ -236,7 +236,7 @@ hr {
 }
 .card2{
     color: var(--main-text-color);
-    background-image: url(../Assets/willie/image13.jpg);
+    background-image: url(../Assets/willie/water11.jpg);
     background-size: cover;
     padding: 10rem 0 0;
     max-width: 35ch;
@@ -258,7 +258,7 @@ hr {
 }
 .card4{
     color: var(--main-text-color);
-    background-image: url(../Assets/willie/image14.jpg);
+    background-image: url(../Assets/willie/image5.jpg);
     background-size: cover;
     padding: 10rem 0 0;
     max-width: 35ch;
@@ -291,6 +291,7 @@ hr {
 .card-content > * :not(.card-title){
     opacity: 0;
     transition: opacity 500ms linear;
+    color: aqua;
 }
 
 
