--- a/CSS/forms.css
+++ b/CSS/forms.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+body {
+    font-family: 'Poppins', sans-serif;
 }
 
 /* weight.html */
@@ -46,6 +50,7 @@ input::placeholder{
 p{
     color: white;
     padding: 20px;
+    font-size: 15px;
 }
 
 /* details.html */
@@ -61,12 +66,9 @@ p{
     border: 1px solid red;
     border-radius: 100px;
 }
-.my-container{
-    width: 50%;
-}
 .my-row{
-    display: flex;
-    justify-content: center;
+    display: flex; 
+    justify-content: center; 
 }
 .my-button{
     text-align: right;
@@ -80,4 +82,24 @@ p{
 #my-gender{
     background-color: black;
     color: white;
+}
+.buttonny{
+    text-align: end;
+    align-items: flex-end;
+}
+.bottle {
+    margin: auto;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+.all {
+    width: 100%;
+}
+.mimeey{
+    width: 50%;
+    margin: auto;
+    align-items: center;
+    height: 100vh;
+    
 }
